System Console Window briefly flashes when exiting Blender on Windows #90868

Closed
opened 2021-08-23 10:41:15 +02:00 by Ludvik Koutny · 12 comments
Contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 2.93.2, branch: master (modified), commit date: 2021-08-03 05:58, hash: 1eb06de260 (Happens also in 3.0.0 Alpha)
Worked: (newest version of Blender that worked as expected)

Short description of error
When exiting Blender on Windows, the System Console Window briefly flashes, despite being never opened during the session. This is especially confusing with non-fresh Blender installation, where the window flash is delayed by a few seconds after main Blender Window closes. It can create an impression something odd is happening with the OS in the background.

Exact steps for others to reproduce the error

  1. Exit Blender on Windows
    Result: System Console Window briefly flashes on exit
    Expected: System Console Window does not flash
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 2.93.2, branch: master (modified), commit date: 2021-08-03 05:58, hash: `1eb06de260` (Happens also in 3.0.0 Alpha) Worked: (newest version of Blender that worked as expected) **Short description of error** When exiting Blender on Windows, the System Console Window briefly flashes, despite being never opened during the session. This is especially confusing with non-fresh Blender installation, where the window flash is delayed by a few seconds after main Blender Window closes. It can create an impression something odd is happening with the OS in the background. **Exact steps for others to reproduce the error** 1. Exit Blender on Windows Result: System Console Window briefly flashes on exit Expected: System Console Window does not flash
Author
Contributor

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche

Added subscribers: @LazyDodo, @Garek

Added subscribers: @LazyDodo, @Garek

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Hi, thanks for the report. Not sure we can call it a bug though.

@LazyDodo as you was involved in creating blender-launcher think it's reasonable to at least notify you about that. I think marking this as TO DO or treating it as feature request is fine either way.

Hi, thanks for the report. Not sure we can call it a bug though. @LazyDodo as you was involved in creating blender-launcher think it's reasonable to at least notify you about that. I think marking this as `TO DO` or treating it as feature request is fine either way.
Member

In the future please tag #platform:_windows rather than me personally. It's an easy one, so I'll leave it for some of the newer guys that want to pick off an easy task, to keep it a little challenging i won't say exactly what needs to be done

  1. this behaviour can be reproduced without the launcher, so it's not launcher related, no need to look at its code
  2. Something is showing the window during shutdown
  3. This should only be done if blender was started from the command prompt, not always
In the future please tag `#platform:_windows` rather than me personally. It's an easy one, so I'll leave it for some of the newer guys that want to pick off an easy task, to keep it a little challenging i won't say exactly what needs to be done 1) this behaviour can be reproduced without the launcher, so it's not launcher related, no need to look at its code 2) Something is showing the window during shutdown 3) This should only be done if blender was started from the command prompt, not always
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Added subscriber: @SHREY-AGGARWAL

Added subscriber: @SHREY-AGGARWAL
Shrey Aggarwal self-assigned this 2022-02-01 14:35:05 +01:00

I'll try to address this problem as my first good issue

I'll try to address this problem as my first good issue

I am unable to replicate the same effect maybe because I freshly installed version 2.93.2 or I am not able to fully understand the problem. The System Console flashes for a very small amount of time in all the version so far I have seen producing only the following on the system Console:

Saved session recovery to 'C:\Users\shrey\AppData\Local\Temp\quit.blend'

Blender quit

Does it say something else in 2.93.2 version? If possible can you send a video of this problem?

I am unable to replicate the same effect maybe because I freshly installed version 2.93.2 or I am not able to fully understand the problem. The System Console flashes for a very small amount of time in all the version so far I have seen producing only the following on the system Console: Saved session recovery to 'C:\Users\shrey\AppData\Local\Temp\quit.blend' Blender quit Does it say something else in 2.93.2 version? If possible can you send a video of this problem?

In #90868#1300064, @SHREY-AGGARWAL wrote:
The System Console flashes for a very small amount of time in all the version so far I have seen producing only the following on the system Console:

Saved session recovery to 'C:\Users\shrey\AppData\Local\Temp\quit.blend'

Blender quit

That is exactly the issue that should be resolved. As Ray said, that should be the case only when Blender was started from command prompt.

> In #90868#1300064, @SHREY-AGGARWAL wrote: > The System Console flashes for a very small amount of time in all the version so far I have seen producing only the following on the system Console: > > Saved session recovery to 'C:\Users\shrey\AppData\Local\Temp\quit.blend' > > Blender quit That is exactly the issue that should be resolved. As Ray said, that should be the case only when Blender was started from command prompt.

This issue was referenced by a5dd1bc53d

This issue was referenced by a5dd1bc53d4bf7994745124f58de674068d1d598
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90868
No description provided.